--- a/slajdy/Makefile
+++ b/slajdy/Makefile
@@ -1,4 +1,4 @@
-lekcja1.pdf: lekcja1.latex styles.tex console.tex script.tex literals.tex operators.tex assignment.tex float.tex tuple.tex
+lekcja1.pdf: lekcja1.latex styles.tex console.tex script.tex literals.tex operators.tex assignment.tex float.tex tuple.tex zadanie1.tex unmutable.tex mutable.tex mutable-copy.tex list.tex list.tex dict.tex
 	latex -output-format pdf lekcja1.latex
 
 styles.tex: Makefile                                                            
@@ -25,5 +25,20 @@ float.tex: float.pycon Makefile
 tuple.tex: tuple.pycon Makefile
 	pygmentize -l pycon -o tuple.tex tuple.pycon
 
-zadanie.tex: zadanie.bash Makefile
-	pygmentize -l bash -o zadanie.tex zadanie.bash
+zadanie1.tex: zadanie1.bash Makefile
+	pygmentize -l bash -o zadanie1.tex zadanie1.bash
+
+unmutable.tex: unmutable.pycon Makefile                                               
+	pygmentize -l pycon -o unmutable.tex unmutable.pycon
+
+mutable.tex: mutable.pycon Makefile                                               
+	pygmentize -l pycon -o mutable.tex mutable.pycon
+
+mutable-copy.tex: mutable-copy.pycon Makefile                                               
+	pygmentize -l pycon -o mutable-copy.tex mutable-copy.pycon
+
+list.tex: list.pycon Makefile                                               
+	pygmentize -l pycon -o list.tex list.pycon
+
+dict.tex: dict.pycon Makefile                                               
+	pygmentize -l pycon -o dict.tex dict.pycon
